# xmonad

./: .stylish-haskell.yaml  README.org  flake.nix  hie.yaml  polybar.ini  xmonad-kid.cabal  xmonad.hs
