cabal-version: 2.4
name:          xmonad-kid
version:       0.1.0.0
category:      System
build-type:    Simple


executable xmonad-kid
  main-is:          xmonad.hs
  build-depends:
      base
    , hostname
    , xmonad
    , xmonad-contrib
    , X11
    , containers
    , directory
    , utf8-string

  hs-source-dirs:   .
  ghc-options: -rtsopts -threaded -with-rtsopts=-N -Wall
  default-language: Haskell2010
