cabal-version: 2.4
name:          xmonad-kid
version:       0.1.0.0
category:      System
build-type:    Simple

executable xmonad-kid
  main-is:          xmonad.hs
  build-depends:
    , base
    , containers
    , dbus
    , directory
    , hostname
    , text
    , utf8-string
    , X11
    , xmonad
    , xmonad-contrib
    , xmonad-dbus

  hs-source-dirs:   .
  ghc-options:      -rtsopts -threaded -with-rtsopts=-N -Wall
  default-language: Haskell2010
